--- a/index.html
+++ b/index.html
@@ -4,80 +4,123 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="" />
-    <link rel="stylesheet" href="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Raleway:wght@500&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Raleway:wght@500&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
 
     <title>La ciudad</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header id="header">
-      <h1>La Ciudad</h1>
-      <p>El diario del pais</p>
+        <h1>La Ciudad</h1>
+        <p>El diario del pais</p>
     </header>
 
     <nav>
-      <ul>
-        <li>home</li>
-        <li>News letters</li>
-        <li>Hoy</li>
-        <li>mas</li>
-      </ul>
+        <ul>
+            <li>home</li>
+            <li>News letters</li>
+            <li>Hoy</li>
+            <li>mas</li>
+        </ul>
     </nav>
 
     <main>
-      <article>
-        <section>
-          <h1>Ordenadores: La escultura del siglo 21</h1>
-          <figure>
-            <img src="images/imgOne.jpg" alt="A young man with a computer" />
-            <figcaption>
-              <em
-                >"Windows X, la nueva plataforma de microsoft ya esta
-                disponible."</em
-              >
-            </figcaption>
-          </figure>
-        </section>
-        <section>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
-            euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
-            accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
-            consectetur urna fringilla. In viverra velit eu lorem condimentum
-            viverra id a metus. Nulla non nulla euismod, viverra lorem a,
-            malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
-            faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
-            elit, condimentum nec tellus in, sodales laoreet ipsum.
-            <br />
-            Praesent ante dolor, egestas ut elementum eu, venenatis sit amet
-            dui. Vivamus euismod efficitur ante quis ultrices. Curabitur
-            sagittis rhoncus accumsan. Cras dapibus nisl egestas sem pulvinar,
-            euismod consectetur urna fringilla. In viverra velit eu lorem
-            condimentum viverra id a metus. Nulla non nulla euismod, viverra
-            lorem a, malesuada erat. Nulla facilisi. Vestibulum ante ipsum
-            primis in faucibus orci luctus et ultrices posuere cubilia curae;
-            Nam mauris elit, condimentum nec tellus in, sodales laoreet ipsum.
-          </p>
-        </section>
-      </article>
-      <aside>
-        <img src="images/dolar.webp" alt="dolar" />
-        <p>hello</p>
-        <img src="images/samsung.png" alt="about samsung" />
-        <p>hello</p>
-        <img src="images/windows.webp" alt="windows" />
-        <p>hello</p>
-      </aside>
+        <article>
+            <section>
+                <h1>Ordenadores: La escultura del siglo 21</h1>
+                <figure>
+                    <img src="images/imgOne.jpg" class="Computer" alt="A young man with a computer" />
+                    <figcaption>
+                        <em>"Windows X, la nueva plataforma de microsoft ya esta
+                            disponible."</em>
+                    </figcaption>
+                </figure>
+            </section>
+            <section>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.
+                    <br />
+                    Praesent ante dolor, egestas ut elementum eu, venenatis sit amet
+                    dui. Vivamus euismod efficitur ante quis ultrices. Curabitur
+                    sagittis rhoncus accumsan. Cras dapibus nisl egestas sem pulvinar,
+                    euismod consectetur urna fringilla. In viverra velit eu lorem
+                    condimentum viverra id a metus. Nulla non nulla euismod, viverra
+                    lorem a, malesuada erat. Nulla facilisi. Vestibulum ante ipsum
+                    primis in faucibus orci luctus et ultrices posuere cubilia curae;
+                    Nam mauris elit, condimentum nec tellus in, sodales laoreet ipsum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.
+                </p>
+            </section>
+        </article>
+        <aside>
+            <div class="infoPlus">
+                <h2>Mas InfoPlus</h2>
+            </div>
+            <img src="images/dolar.webp" class="dolar" alt="dolar" />
+            <h2>Dolar</h2>
+            <p> Nulla non nulla euismod, viverra lorem a,
+                malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in</p>
+            <img src="images/samsung.png" class="samsung" alt="about samsung" />
+            <h2>Samsung</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+            </p>
+
+            <img src="images/windows.webp" class="windows" alt="windows" />
+            <h2>Microsoft</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+            </p>
+        </aside>
     </main>
-  </body>
-  <footer>
+</body>
+<footer>
     <p>Copyright la ciudad.</p>
-    <a
-      href="https://www.google.com/search?q=Felices+fiestas+2020&oi=ddle&ct=173710363&hl=es-419&kgmid=ddl&source=doodle-ntp&ved=0ahUKEwiBmK2LmdHtAhV-LLkGHVvzCPcQPQgB"
-      >Google.com</a
-    >
-    <a href="#header"> Volver al inicio</a>
-  </footer>
-</html>
+    <a href="https://www.google.com/search?q=Felices+fiestas+2020&oi=ddle&ct=173710363&hl=es-419&kgmid=ddl&source=doodle-ntp&ved=0ahUKEwiBmK2LmdHtAhV-LLkGHVvzCPcQPQgB">Google.com</a>
+    <a href="#header"> Volver al inicio </a>
+</footer></html>
