Agrege el NavBar. Nuevo estilo. +Ajustes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- Palabras al azar: Ordenador, Escultura, Armario. -->
 
+<!--John 3:16 -->
+
 <!DOCTYPE html>
 
 <html>
@@ -23,10 +25,10 @@
 
     <nav>
         <ul>
-            <li>home</li>
-            <li>News letters</li>
-            <li>Hoy</li>
-            <li>mas</li>
+            <li> <a href="">Home</a></li>
+            <li> <a href="">News</a></li>
+            <li> <a href="">Info+</a></li>
+            <li> <a href="">Mundo</a></li>
         </ul>
     </nav>
 
