Acomode el Footer, le di unos retoques al Main y Agregue mas contenido.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+
+<head>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -98,6 +99,61 @@
                     faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
                     elit, condimentum nec tellus in, sodales laoreet ipsum.
                 </p>
+                <h1>El futuro de Microsoft</h1>
+                <h3>Estaremos alli para verlo en accion? <br> <em>"Microsoft Corporation" </em> nos tiene hype por las nubes. Su nuevo producto, "El proyecto X" - (La nueva generacion)</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.
+                    <br />
+                    Praesent ante dolor, egestas ut elementum eu, venenatis sit amet
+                    dui. Vivamus euismod efficitur ante quis ultrices. Curabitur
+                    sagittis rhoncus accumsan. Cras dapibus nisl egestas sem pulvinar,
+                    euismod consectetur urna fringilla. In viverra velit eu lorem
+                    condimentum viverra id a metus. Nulla non nulla euismod, viverra
+                    lorem a, malesuada erat. Nulla facilisi. Vestibulum ante ipsum
+                    primis in faucibus orci luctus et ultrices posuere cubilia curae;
+                    Nam mauris elit, condimentum nec tellus in, sodales laoreet ipsum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                    ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
+                    euismod efficitur ante quis ultrices. Curabitur sagittis rhoncus
+                    accumsan. Cras dapibus nisl egestas sem pulvinar, euismod
+                    consectetur urna fringilla. In viverra velit eu lorem condimentum
+                    viverra id a metus. Nulla non nulla euismod, viverra lorem a,
+                    malesuada erat. Nulla facilisi. Vestibulum ante ipsum primis in
+                    faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
+                    elit, condimentum nec tellus in, sodales laoreet ipsum.
+                </p>
             </section>
         </article>
         <aside>
@@ -121,8 +177,18 @@
         </aside>
     </main>
 </body>
+
+
+
 <footer>
-    <p>Copyright la ciudad.</p>
-    <a href="https://www.google.com/search?q=Felices+fiestas+2020&oi=ddle&ct=173710363&hl=es-419&kgmid=ddl&source=doodle-ntp&ved=0ahUKEwiBmK2LmdHtAhV-LLkGHVvzCPcQPQgB">Google.com</a>
-    <a href="#header"> Volver al inicio </a>
+    <div class="poorfoot">
+        <ul>
+            <li class="rightFooter">Copyright La ciudad © | Todos los derechos reservados</li>
+            <li class="rightFooter">Miembro de GDA.Grupo de Diarios América </li>
+            <img class="rightFooter" src="https://static.glanacion.com/v2/ln/img/gda.jpg" alt="GDA">
+            <li class="leftFooter"> <a href="https://www.google.com/search?q=Felices+fiestas+2020&oi=ddle&ct=173710363&hl=es-419&kgmid=ddl&source=doodle-ntp&ved=0ahUKEwiBmK2LmdHtAhV-LLkGHVvzCPcQPQgB">Google.com</a></li>
+            <li class="leftFooter"><a href="#header">Volver al Inicio</a></li>
+
+        </ul>
+    </div>
 </footer></html>
