--- a/index.html
+++ b/index.html
@@ -99,8 +99,16 @@
                     faucibus orci luctus et ultrices posuere cubilia curae; Nam mauris
                     elit, condimentum nec tellus in, sodales laoreet ipsum.
                 </p>
-                <h1>El futuro de Microsoft</h1>
-                <h3>Estaremos alli para verlo en accion? <br> <em>"Microsoft Corporation" </em> nos tiene hype por las nubes. Su nuevo producto, "El proyecto X" - (La nueva generacion)</h3>
+            </section>
+        </article>
+        <article>
+            <section>
+                <h1>El futuro de Microsoft </h1>
+                <h3>Estaremos alli para verlo en accion? <br> <em>"Microsoft Corporation" </em> nos tiene el hype por las nubes. Su nuevo producto, "El proyecto X" - (La nueva generacion) arraza con todo</h3>
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
                     ante dolor, egestas ut elementum eu, venenatis sit amet dui. Vivamus
