Corregir el Aside

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </p>
             </section>
         </article>
-        <article>
+        <article class="article2">
             <section>
                 <h1>El futuro de Microsoft </h1>
                 <h3>Estaremos alli para verlo en accion? <br> <em>"Microsoft Corporation" </em> nos tiene el hype por las nubes. Su nuevo producto, "El proyecto X" - (La nueva generacion) arraza con todo</h3>
